# temp-anomalies-graz

./: .flake8  LICENSE  README.md  setup.cfg
temp_anomalies_graz/: cli.py  temp_anomalies.py
temp_anomalies_graz/data/: klima-daily_Graz.csv
