[metadata]
name = temp_anomalies_graz
author = Michael Hadwiger
author_email = m.hadwiger@student.tugraz.at
license = MIT
description = Temperature anomalies in Graz
long_description_content_type=
long_description =
url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = .
setup_requires =
    setuptools_scm
python_requires = >=3.7
install_requires =
    numpy >= 1.18
    matplotlib

[options.package_data]
* =
    data/*.csv

[options.entry_points]
console_scripts =
  temp_anomalies_graz = temp_anomalies_graz.cli:temp_anomalies_graz
